# algo-trading-platform

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  quant_engine
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: alerts.py  analytics.py  anomaly.py  auth.py  autotrade.py  backtest.py  benchmarks.py  breadth.py  commentary.py  crypto.py  dividends.py  earnings.py  earnings_vol.py  economics.py  fundamentals.py  health.py  insider.py  intraday.py  journal.py  live_orders.py  market_data.py  ml.py  news.py  notifications.py  optimize.py  options.py  options_flow.py  paper_trading.py  patterns.py  portfolios.py  risk.py  rl.py  scanner.py  scheduler.py  sectors.py  share.py  signals.py  strategies.py  strategy_builder.py  stress.py  (+4 more)
backend/app/core/: config.py  logging.py
backend/app/models/: database.py  schemas.py
backend/app/services/: alert_service.py  alpaca_order_service.py  alpaca_price_service.py  alpaca_ws_service.py  analytics_service.py  anomaly_service.py  attribution_service.py  auth_service.py  autotrade_service.py  backtest_service.py  benchmark_service.py  breadth_service.py  commentary_service.py  crypto_service.py  dividend_service.py  earnings_service.py  earnings_vol_service.py  economics_service.py  fundamentals_service.py  insider_service.py  intraday_service.py  iv_surface_service.py  journal_service.py  market_data.py  ml_service.py  monte_carlo_service.py  news_service.py  notification_service.py  optimization_service.py  options_flow_service.py  options_service.py  paper_trading_service.py  pattern_service.py  portfolio_service.py  price_broadcaster.py  price_simulator.py  regime_service.py  report_service.py  scanner_service.py  scheduler_service.py  (+10 more)
backend/tests/: conftest.py  test_api.py  test_auth_service.py  test_health.py  test_quant_features.py  test_services.py
data/ingestion/: intraday_loader.py  requirements.txt  yfinance_loader.py
data/migrations/: init.sql
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/__tests__/: api-types.test.ts  signal-helpers.test.ts
frontend/src/components/charts/: CandlestickChart.tsx  CorrelationHeatmap.tsx  EfficientFrontierChart.tsx  EquityCurveChart.tsx  FeatureImportanceChart.tsx  PriceChart.tsx  SHAPWaterfallChart.tsx  SentimentGauge.tsx
frontend/src/components/common/: EmptyState.tsx  InfoTooltip.tsx  LastUpdated.tsx
frontend/src/components/dashboard/: AICommentary.tsx  GettingStarted.tsx  WatchlistWidget.tsx
frontend/src/components/layout/: Sidebar.tsx  SymbolSearch.tsx  TickerBar.tsx  TopBar.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAlerts.ts  useKeyboardShortcuts.ts  useLivePrices.ts  useWebSocket.ts
frontend/src/pages/: Alerts.tsx  Analytics.tsx  Anomaly.tsx  AutoTrade.tsx  Backtest.tsx  Benchmarks.tsx  Breadth.tsx  Compare.tsx  Crypto.tsx  Dashboard.tsx  Dividends.tsx  Earnings.tsx  EarningsVol.tsx  Economics.tsx  Fundamentals.tsx  Heatmap.tsx  Insider.tsx  Intro.tsx  Journal.tsx  Leaderboard.tsx  LiveTrading.tsx  Login.tsx  MLModels.tsx  News.tsx  Optimize.tsx  OptionPayoff.tsx  Options.tsx  OptionsFlow.tsx  Patterns.tsx  Portfolios.tsx  RLAgent.tsx  Rebalance.tsx  Risk.tsx  Scanner.tsx  Sectors.tsx  Settings.tsx  SharedPortfolio.tsx  Signals.tsx  Sizing.tsx  Strategies.tsx  (+7 more)
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
ml-engine/: predict.py  requirements.txt  rl_agent.py  train.py
ml-engine/features/: engineer.py  technical.py
ml-engine/models/: lstm.py  xgboost_model.py
nginx/: nginx.conf
quant-engine/: __init__.py
quant-engine/backtest/: __init__.py  engine.py  metrics.py  runner.py  wfo.py
quant-engine/optimization/: __init__.py  markowitz.py
quant-engine/risk/: __init__.py  portfolio.py  var.py
quant-engine/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  pairs_trading.py
